--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1586,107 +1586,107 @@ stories:
   domain: http://www.tribstar.com/
   link: https://www.tribstar.com/sports/local_high_school_sports/terre-haute-north-reaches-wabash-valley-semifinals-again/image_bfd6da81-7e63-5865-bf7d-8d42042342df.html
 images:
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit.jpg
-- name: border-fence-border-fence-on-hill-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-graham-sutherland.jpg
-- name: server-cloud-server-racks-clouds-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-creativity.jpg
-- name: bf-skinner-san-pedro-light-cities.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-san-pedro-light-cities.jpg
-- name: blossombar-spagetti-accident-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-spagetti-accident-file-00-00-00-00.jpg
-- name: old-door-lock-old-door-lock-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-far-away.jpg
-- name: oldsmallboat-oldsmallboat-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-granite.jpg
-- name: death-valley-death-valley-national-park-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-clean-view.jpg
-- name: berlinwall-DSC-0084-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-granite.jpg
-- name: victoria-victoria-corner-hotel-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-alberto-giacometti.jpg
-- name: abe-lincoln-one-space-pizza-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-space-pizza-file-00-00-07-91.jpg
-- name: death-valley-death-valley-national-park-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-gan-vogh.jpg
-- name: paris-paris-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-clean-view.jpg
-- name: stories-new-72-124-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-72-124-800-500-0-max-0--1--1.jpg
-- name: mistywoods-babyfoot-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-spagetti-accident.jpg
-- name: statue-of-liberty-front-view-statueofliberty-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-smoking-cigarette.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-spagetti-accident.jpg
-- name: store-on-corner-oldcabin-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-aqua.jpg
-- name: old-door-lock-old-door-lock-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-three.jpg
-- name: mosaic-face-mosaic-face-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-two.jpg
-- name: stories-new-43-150-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-43-150-800-500-0-max-0--5--5.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
-- name: downtheline-downtheline-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colorful-blocks.jpg
-- name: ellis-island-ellisisland-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-electricity.jpg
-- name: dragon-desert-desert-dragon-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-diego-rivera1.jpg
-- name: abe-lincoln-one-pablo-blue-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-15-87.jpg
-- name: birdhouse-birdhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-soul.jpg
-- name: containership-containership-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
-- name: eduardo-eduardo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alien-goggles.jpg
-- name: copper-circuit-downtown-125thstreet.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-125thstreet.jpg
-- name: crow-crow-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-alberto-giacometti.jpg
-- name: white-house-whitehouse-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-propaganda-leaflets.jpg
-- name: scream-IMG_E3643.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_E3643.jpg
-- name: nazi-invasion-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-desktop-laptop-chair.jpg
-- name: old-granary-field-granaryfield-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-oily-mcoilface.jpg
-- name: old-granary-field-oldhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-space-pizza.jpg
-- name: status-berlin-status-berlin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
-- name: stalin-time-statue-with-shield-dark.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-with-shield-dark.jpg
-- name: miamibeach-miamibeach-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dali-two.jpg
-- name: berlinwall2-berlinwall-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-soul.jpg
-- name: wave-DSC_0291.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0291.jpg
-- name: status-berlin-status-berlin-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-emily-carr.jpg
-- name: art-museum-art-museum-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-cinnamon-rolls.jpg
-- name: aws-s3-stories-server-racks-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-racks-clouds-dark-dali.jpg
-- name: razorwire-DSC-0080-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-circuit.jpg
-- name: stalin-time-dragon-desert-looking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dragon-desert-looking.jpg
-- name: blossombar-yellow-collage-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-50-62.jpg
-- name: sand-hand-sand-hand-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-5.jpg
-- name: old-barn-old-barn-1500-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-constitution.jpg
-- name: locked-up-steam-lock-up-steam-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alien-goggles.jpg
-- name: berlinwall2-berlinwall-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-kandinsky-bv.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
+- name: oldhouse-granaryfield-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-internet-numbers.jpg
+- name: oldhotel-oldhotel-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-rain.jpg
+- name: server-cloud-server-racks-door-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-graham-sutherland.jpg
+- name: birdhouse-birdhouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-green-zuma.jpg
+- name: downtown-los-angeles-downtown-la-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit.JPG
+- name: scream-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8494.jpg
+- name: downtown-trucksilo-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-light-dali.jpg
+- name: aws-s3-deserthills-deserthills-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still-1200.jpg
+- name: copper-circuit-eagle-spread-tree-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-eagle-spread-tree-2.jpg
+- name: adam-smith-adam-smith-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crunch-paper.jpg
+- name: nyc-flag-nycflag-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-blocks.jpg
+- name: abandonedbuildings_ww2_dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_ww2_dresden.jpg
+- name: oldtrain-oldtrain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kandinsky-bv.jpg
+- name: braceros-domingo-ulloa-gypsy-house-with-pen.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-gypsy-house-with-pen.jpg
+- name: gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
+- name: bf-skinner-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-please-do-not-feed-the-pigeon.jpg
+- name: power-lines-power-lines-empty-space-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-granite.jpg
+- name: old-gas-pumps-oldgaspumps-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-rainbow-festival.jpg
+- name: locked-up-steam-lock-up-steam-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alberto-giacometti.jpg
+- name: hollywood-building-hollywood-building-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-brush.jpg
+- name: braceros-domingo-ulloa-train-coming-up-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-coming-up-tracks.jpg
+- name: aws-s3-stories-window-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-window-clean-view.jpg
+- name: crow_deep_connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_deep_connections.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-free-woman.jpg
+- name: mosaic-face-mosaic-face-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dark-dali.jpg
+- name: subway-subway-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crabapple.jpg
+- name: old-cabin-oldcabin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gan-vogh.jpg
+- name: beach-rocks-beach-rocks-currents-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gred-mash.jpg
+- name: power-lines-power-lines-empty-space-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-brush.jpg
+- name: containership-containership-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
+- name: hollywood-building-hollywood-building-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-hot-spicy.jpg
+- name: aws-s3-smithriver-smithriver-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still-600.jpg
+- name: server-cloud-server-racks-door-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-creativity.jpg
+- name: oldcabin-store-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-far-away.jpg
+- name: powerlines-power-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-missle.jpg
+- name: la-muse-downtown-berlin-crowds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-berlin-crowds.jpg
+- name: stories-server-racks-clouds-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-racks-clouds-copper-circuit.jpg
+- name: oldsmallboat-oldsmallboat-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-clean-view.jpg
+- name: docks-docks-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-post-modern.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-circuit.jpg
+- name: sand-hand-sand-hand-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-plentiful.jpg
+- name: old-barn-old-barn-1500-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-nazi-poster.jpg
+- name: bordercrossing-bordercrossing-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-blocks.jpg
+- name: oldtrain-oldtrain-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-marcel-duchamp.jpg
+- name: legal-statue-legalstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-monet-one.jpg
+- name: old-cabin-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-satan-red.jpg
+- name: braceros-domingo-ulloa-san-francisco-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-skyline.jpg
+- name: oldhotel-oldhotel-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-rainbow-festival.jpg
+- name: bf-skinner-london-underground-covent-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-london-underground-covent-garden.jpg
 ---
 Friends Lend Villages Libraries Helping Hand.&nbsp;Navy SEALs Call Eddie Gallagher 'evil' And 'toxic' In Video.&nbsp;Giannis Antetokounmpo Ruled Out Because Of Back Soreness.&nbsp;Tips For Creating A Photo Book.&nbsp;George Michael's Sister Dies On Christmas Day, Exactly Three Years After Singer.&nbsp;Early College Signing Day.&nbsp;Bears Will Be Without Two Starters Along Each Line In Finale Against Vikings.&nbsp;Man Who Made 27,000 Crosses For Shooting Victims Is Retiring.&nbsp;
